exports[`authReducer AuthRequestStateReducer should handle LOGIN_ERROR 1`] = `
Object {
  "isLoading": false,
}
`

exports[`authReducer AuthRequestStateReducer should handle LOGIN_SUBMIT 1`] = `
Object {
  "isLoading": true,
}
`

exports[`authReducer AuthRequestStateReducer should handle LOGIN_SUCCESS 1`] = `
Object {
  "isLoading": false,
}
`

exports[`authReducer AuthRequestStateReducer should handle REGISTER_ERROR 1`] = `
Object {
  "isLoading": false,
}
`

exports[`authReducer AuthRequestStateReducer should handle REGISTER_SUBMIT 1`] = `
Object {
  "isLoading": true,
}
`

exports[`authReducer AuthRequestStateReducer should handle REGISTER_SUCCESS 1`] = `
Object {
  "isLoading": false,
}
`

exports[`authReducer AuthRequestStateReducer should return initial state 1`] = `
Object {
  "isLoading": false,
}
`

exports[`authReducer userReducer should handle LOGIN_ERROR 1`] = `
Object {
  "data": Object {},
  "error": "login-error",
  "hasRegistered": false,
  "isLoggedIn": false,
  "token": "",
}
`

exports[`authReducer userReducer should handle LOGIN_SUCCESS 1`] = `
Object {
  "data": "testuser",
  "error": "",
  "hasRegistered": false,
  "isLoggedIn": true,
  "token": "testtoken",
}
`

exports[`authReducer userReducer should handle LOGOUT 1`] = `
Object {
  "data": Object {},
  "isLoggedIn": false,
  "token": "",
  "user": Object {
    "isLoggedIn": true,
    "token": "testoken",
  },
}
`

exports[`authReducer userReducer should handle REGISTER_ERROR 1`] = `
Object {
  "data": Object {},
  "error": "register-error",
  "hasRegistered": false,
  "isLoggedIn": false,
  "token": "",
}
`

exports[`authReducer userReducer should handle REGISTER_SUCCESS 1`] = `
Object {
  "data": Object {},
  "error": Object {},
  "hasRegistered": true,
  "isLoggedIn": false,
  "token": "",
}
`

exports[`authReducer userReducer should return initial state 1`] = `
Object {
  "data": Object {},
  "error": Object {},
  "hasRegistered": false,
  "isLoggedIn": false,
  "token": "",
}
`
